--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
   ],
   "scripts": {
     "build": "turbo run build",
-    "dev": "turbo run dev --parallel",
+    "start": "turbo run dev --parallel",
+    "dev": "pnpm run start",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
     "eslint-config-custom": "workspace:*",
     "prettier": "latest",
+		"prettier-plugin-svelte": "^2.7.0",
     "turbo": "latest"
   },
   "engines": {
