--- a/packages/eslint-config-custom/package.json
+++ b/packages/eslint-config-custom/package.json
@@ -5,10 +5,9 @@
   "license": "MIT",
   "dependencies": {
     "eslint": "^7.23.0",
-    "eslint-config-next": "^12.0.8",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-react": "7.28.0",
-    "eslint-config-turbo": "latest"
+    "eslint-config-turbo": "latest",
+    "eslint-plugin-svelte3": "^4.0.0"
   },
   "devDependencies": {
     "typescript": "^4.7.4"
