--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "devDependencies": {
     "eslint-config-custom": "workspace:*",
     "prettier": "latest",
-		"prettier-plugin-svelte": "^2.7.0",
+    "prettier-plugin-svelte": "^2.7.0",
     "turbo": "latest"
   },
   "engines": {
@@ -24,5 +24,6 @@
     "node": ">=14.0.0"
   },
   "dependencies": {},
-  "packageManager": "pnpm@7.1.3"
+  "packageManager": "pnpm@7.1.3",
+  "license": "MIT"
 }
