--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -8,6 +8,7 @@
 		"build": "svelte-kit sync && svelte-package",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
+    "lint": "eslint *.ts*",
 		"story:dev": "histoire dev",
 		"story:build": "histoire build",
 		"story:preview": "histoire preview"
@@ -18,6 +19,8 @@
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
 		"@sveltejs/package": "next",
+    "eslint": "^7.32.0",
+    "eslint-config-custom": "workspace:*",
 		"histoire": "^0.10.7",
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.7.1",
