--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -4,7 +4,8 @@
 	"main": "src/lib/index.js",
 	"license": "MIT",
 	"scripts": {
-		"dev": "vite dev",
+		"olddev": "vite dev",
+		"start": "histoire dev",
 		"build": "svelte-kit sync && svelte-package",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
