--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "packages/*"
   ],
   "scripts": {
-    "preinstall": "test \"$CI\" = true && npx pnpm install -r --store=node_modules/.pnpm-store || echo skipping pnpm install",
+    "old": "[[ $CI = true ]] && npx pnpm@3 install -r --store=node_modules/.pnpm-store || echo skiping pnpm install",
+    "prebuild": "test \"$CI\" = true && npx pnpm install -r --store=node_modules/.pnpm-store || echo skipping pnpm install",
     "build": "turbo run build",
     "start": "turbo run dev --parallel",
     "dev": "pnpm run start",
@@ -16,15 +17,16 @@
   },
   "devDependencies": {
     "eslint-config-custom": "workspace:*",
+    "pnpm": "^7.9.5",
     "prettier": "latest",
     "prettier-plugin-svelte": "^2.7.0",
+    "svelte": "^3.2.0",
     "turbo": "latest"
   },
   "engines": {
     "npm": ">=7.0.0",
     "node": ">=14.0.0"
   },
-  "dependencies": {},
   "packageManager": "pnpm@7.1.3",
   "license": "MIT"
 }
