--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,5 @@
 [build]
-  # Directory to change to before starting a build.
-  # This is where we will look for package.json/.nvmrc/etc.
-  # If not set, defaults to the root directory.
-  base = "project/"
+  # base = "project/"
 
   publish = ".dist"
   command = "pnpm run build || ( npm install pnpm && pnpm run build )"
