--- a/packages/eslint-config-custom/package.json
+++ b/packages/eslint-config-custom/package.json
@@ -10,7 +10,8 @@
     "eslint-plugin-svelte3": "^4.0.0"
   },
   "devDependencies": {
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "svelte": "^3.24.0"
   },
   "publishConfig": {
     "access": "public"
