--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -12,18 +12,18 @@
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write ."
 	},
-  "dependencies": {
-    "ui": "workspace:*"
-  },
+	"dependencies": {
+		"ui": "workspace:*"
+	},
 	"devDependencies": {
 		"@playwright/test": "^1.25.0",
-		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/adapter-netlify": "1.0.0-next.73",
 		"@sveltejs/kit": "next",
+		"@types/node": "^17.0.12",
 		"eslint": "^8.16.0",
-    "eslint-config-custom": "workspace:*",
+		"eslint-config-custom": "workspace:*",
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.7.1",
-    "@types/node": "^17.0.12",
 		"typescript": "^4.7.4",
 		"vite": "^3.0.4"
 	},
